# ABY

./: CMakeLists.txt
src/src/: CMakeLists.txt
src/src/a/: CMakeLists.txt  a.cpp
src/src/euclidean_distance/: CMakeLists.txt  euclidean_distance.cpp
src/src/float/: abyfloat.cpp  abyfloattemp.cpp
src/src/innerproduct/: CMakeLists.txt  innerproduct.cpp
src/src/kmeans/: CMakeLists.txt  kmeans.cpp
src/src/kmeans1/: CMakeLists.txt  kmeans1.cpp
src/src/kmeans2/: CMakeLists.txt  kmeans2.cpp
src/src/kmeans3/: CMakeLists.txt  kmeans3.cpp
src/src/kmeans4/: CMakeLists.txt  kmeans4.cpp
src/src/kmeans5/: CMakeLists.txt  kmeans5.cpp
src/src/millionaire_prob/: CMakeLists.txt  millionaire_prob.cpp
src/src/randNum/: CMakeLists.txt  randNum.cpp
src/src/sample/common/: innerproduct.cpp
src/src/temp/: CMakeLists.txt  temp.cpp
src/src/userSim/: CMakeLists.txt  userSim.cpp
src/src/userSimF/: CMakeLists.txt  userSimF.cpp
