#add_subdirectory(sample)
#add_subdirectory(millionaire_prob)
#add_subdirectory(euclidean_distance)
#add_subdirectory(innerproduct)
#add_subdirectory(float)
#add_subdirectory(a)
add_subdirectory(temp)
add_subdirectory(randNum)
#add_subdirectory(userSimF)
add_subdirectory(userSim)
#add_subdirectory(kmeans)
#add_subdirectory(kmeans1)
#add_subdirectory(kmeans2)
#add_subdirectory(kmeans3)
#add_subdirectory(kmeans4)
add_subdirectory(kmeans5)